# smaug-hwt-sampling

./: .gitignore  CMakeLists.txt  expect.txt  res.txt
benchmark/: CMakeLists.txt  bench-hwt-algo.c  bench-hwt-variation.c  bench-hwt.c  estimate_buf_size.c  speed_print.c  speed_print.h
include/: hwt.h  rng.h
src/: hwt-bike.c  hwt-ntru.c  hwt-smaug.c  hwt-variation.c  rng.c
test/: CMakeLists.txt  coef_encoding_32.c  distribution.c  distribution_plot.py  distribution_plot_cnt.py  distribution_plot_i_.py  distribution_plot_i_val.py  distribution_plot_val.py  estimate_buf_size.c  estimate_required_seed.c
test/0818-sample-1/: smaug1-deg-cnt-update.txt  smaug3-deg-cnt-origin.txt  smaug3-deg-cnt-update.txt  smaug3-deg-dist-origin.txt  smaug5-deg-cnt-origin.txt  smaug5-deg-cnt-update.txt  smaug5-deg-dist-origin.txt
test/0822-rand-1/: out1.txt  out3.txt  out5.txt
test/0823-buf-1/: out1.txt
test/sample/0818-sample-1/: smaug1-deg-cnt-origin.txt  smaug1-deg-dist-origin.txt  smaug1-deg-dist-update.txt  smaug3-deg-dist-update.txt  smaug5-deg-dist-update.txt
test/sample/0823-buf-1/: out3.txt  out5.txt
test/sample/0824-deg-check-2/: distribution_plot_i_smaug1.ipynb
test/sample/cnt-deg-0831/: distribution_plot_0830.ipynb  distribution_plot_0831.ipynb  smaug1-deg-cnt-origin.txt  smaug1-deg-cnt-update-2.txt  smaug1-deg-cnt-update.txt  smaug1-deg-dist-origin.txt  smaug1-deg-dist-update-2.txt  smaug1-deg-dist-update.txt  smaug3-deg-cnt-origin.txt  smaug3-deg-cnt-update-2.txt  smaug3-deg-cnt-update.txt  smaug3-deg-dist-origin.txt  smaug3-deg-dist-update-2.txt  smaug3-deg-dist-update.txt  smaug5-deg-cnt-origin.txt  smaug5-deg-cnt-update-2.txt  smaug5-deg-cnt-update.txt  smaug5-deg-dist-origin.txt  smaug5-deg-dist-update-2.txt  smaug5-deg-dist-update.txt
test/sample/cnt-deg-0918-1/: distribution_plot.ipynb  smaug1-deg-dist-origin.txt  smaug1-deg-dist-update-20.txt  smaug1-deg-dist-update-32.txt  smaug3-deg-dist-origin.txt  smaug3-deg-dist-update-20.txt  smaug3-deg-dist-update-32.txt  smaug5-deg-dist-origin.txt  smaug5-deg-dist-update-20.txt  smaug5-deg-dist-update-32.txt
test/sample/cnt-deg-0918-2/: distribution_plot.ipynb  smaug1-deg-dist-origin.txt  smaug1-deg-dist-update-20.txt  smaug1-deg-dist-update-32.txt  smaug3-deg-dist-origin.txt  smaug3-deg-dist-update-20.txt  smaug3-deg-dist-update-32.txt  smaug5-deg-dist-origin.txt  smaug5-deg-dist-update-20.txt  smaug5-deg-dist-update-32.txt
